# Aigovops-Foundation-Open-Source-V4-10k

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INTEROP.md  LICENSE  NOTICE.md  README.md  install.sh  package.json
.github/workflows/: ci.yml  pages.yml  release.yml
deploy/: cloud-init.yaml  fly.toml  render.yaml
deploy/.do/: app.yaml
deploy/compose/: Caddyfile  docker-compose.yml
deploy/console/: README.md  appsmith-datasource.json  catalog-info.yaml  grafana-dashboard.json  prometheus-scrape.yml
deploy/helm/aigovops/: Chart.yaml  values.yaml
deploy/helm/aigovops/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
deploy/observability/: README.md  compose.yml  otel-collector.yaml  prometheus.yml
deploy/observability/grafana/provisioning/dashboards/: provider.yml
deploy/provision/: cloud-init.yaml
deploy/scripts/: deploy.sh  sign-desktop.sh
deploy/stripe/: env.template
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: BLUEPRINT.md  MILESTONES.md  PRODUCTIZATION.md  ROADMAP.md  RUNBOOK.md  SAAS.md  index.html
jeeves/: package.json
jeeves/src/: converse.mjs  index.mjs  llm.mjs  manager.mjs
jeeves/test/: jeeves-llm.test.mjs  jeeves.test.mjs
sdk/python/: README.md  conformance.py  pyproject.toml
sdk/python/aigovops/: __init__.py
shared/: gate.mjs  package.json
shared/test/: gate.test.mjs
