[package]
name = "aigovops"
version = "4.0.0"
description = "AiGovOps — get your AI governed"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"   # to run the gate (node) as a sidecar

[features]
custom-protocol = ["tauri/custom-protocol"]
